@@ -42,11 +42,11 @@
 #' # For example, the following plot shows the number of movies
 #' # in each rating.
 #' m <- ggplot(movies, aes(rating))
-#' m + geom_bar(binwidth = 0.1)
+#' m + geom_histogram(binwidth = 0.1)
 #'
 #' # If, however, we want to see the number of votes cast in each
 #' # category, we need to weight by the votes variable
-#' m + geom_bar(aes(weight = votes), binwidth = 0.1) + ylab("votes")
+#' m + geom_histogram(aes(weight = votes), binwidth = 0.1) + ylab("votes")
 #'
 #' # For transformed scales, binwidth applies to the transformed data.
 #' # The bins have constant width on the transformed scale.
@@ -82,7 +82,12 @@ geom_histogram <- function(mapping = NULL, data = NULL, stat = "bin",
     position = position,
     show.legend = show.legend,
     inherit.aes = inherit.aes,
-    params = list(...),
-    stat_params = list(binwidth = binwidth, bins = bins, origin = origin, right = right)
+    params = list(
+      binwidth = binwidth,
+      bins = bins,
+      origin = origin,
+      right = right,
+      ...
+    )
   )
 }
